--- a/recipeapp/templates/nav.html
+++ b/recipeapp/templates/nav.html
@@ -5,7 +5,7 @@
 
   {% if user.is_authenticated %}
     <li class="nav-item">
-      <a class="nav-link active" href="{% url 'user_profile' user.id %}">Hello, {{ user.username }}</a>
+      <a class="nav-link active" href="#">Hello, {{ user.username }}</a>
     </li>
     {% if user.is_superuser %}
     <li class="nav-item">
