--- a/recipeapp/templates/index.html
+++ b/recipeapp/templates/index.html
@@ -9,7 +9,7 @@
     </a>
   {% endif %}
   {% if user.is_authenticated %}
-    <a class="btn btn-secondary" style="margin-left:1.2%;margin-top:5%;" href="#">
+    <a class="btn btn-secondary" style="margin-left:1.2%;margin-top:5%;" href="{% url 'recipe_create' %}">
       Create recipe
     </a>
   {% endif %}
