--- a/recipeapp/templates/index.html
+++ b/recipeapp/templates/index.html
@@ -10,6 +10,12 @@
     </a>
   {% endif %}
 
+    {% if user.is_superuser %}
+    <a class="btn btn-secondary" style="margin-left:1.2%;margin-top:5%;" href="{% url 'tag_create' %}">
+      Create tag
+    </a>
+  {% endif %}
+
   {% if user.is_authenticated %}
     <a class="btn btn-secondary pull-right" style="margin-left:1.2%;margin-top:5%;" href="{% url 'recipe_create' %}">
       Create recipe
