Fixed Recipe Create View

--- a/recipeapp/templates/recipe_create.html
+++ b/recipeapp/templates/recipe_create.html
@@ -67,6 +67,11 @@
         {% endfor %}
       </select>
       <br/>
+
+      <div class="form-group mx-2" >
+        <input type="file" name="image" accept="image/*">
+      </div>
+
     </div>
     <br/>
 
