--- a/recipeapp/templates/category_detail.html
+++ b/recipeapp/templates/category_detail.html
@@ -7,6 +7,9 @@
     {% for recipe in recipe_list %}
       <div class="col-sm-6 p-3" style="text-align:center; color: dimgrey; font-family:'Crimson Text'">
             <h5 class="card-title">{{ recipe.title}}</h5>
+            {% if recipe.image %}
+            <a href="{% url 'recipe_detail' recipe.id %}" class="btn btn-primary" style="outline:none; background-color:white; border-color:white;"> <img src="{{ recipe.image.url }}" height="400px;" /></a>
+            {% endif %}
       </div>
     {% endfor %}
   </div>
