--- a/recipeapp/templates/base.html
+++ b/recipeapp/templates/base.html
@@ -12,11 +12,13 @@
     <script src="{% static 'js/popper.min.js' %}"></script>
 
   </head>
-  <body>
+  <body style="background: url(//cdn.jamieoliver.com/library/images/_mealplan/bg.jpg) top repeat-x #fff;">
     {% include 'nav.html' %}
 
+  <div class="container">
     {% block content %}
     {% endblock %}
+  </div>
   </body>
     {% block js %}
     {% endblock %}
