--- a/recipeapp/templates/nav.html
+++ b/recipeapp/templates/nav.html
@@ -1,32 +1,33 @@
-<ul class="nav">
-  <li class="nav-item">
-    <a class="nav-link active" href="{% url 'category_list' %}"> Top Chef </a>
-  </li>
-
-  <li class="nav-item">
-    <a class="nav-link active" href="{% url 'recipe_list' %}">Recipes</a>
-  </li>
-
-  {% if user.is_authenticated %}
-    <li class="nav-item">
-      <a class="nav-link active" href="{% url 'user_profile' user.id %}">Hello, {{ user.username }}</a>
-    </li>
-
-    {% if user.is_superuser %}
-    <li class="nav-item">
-      <a class="nav-link active" href="{% url 'admin:index' %}">Admin</a>
-    </li>
-    {% endif %}
-    <li class="nav-item">
-      <a class="nav-link active" href="{% url 'logout' %}">Logout</a>
-    </li>
-  {% else %}
-    <li class="nav-item">
-      <a class="nav-link active" href="{% url 'login' %}">Login</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link active" href="{% url 'register' %}">Register</a>
-    </li>
-
-  {% endif %}
-  </ul>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="{% url 'category_list' %}"> TopChef </a>
+  <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="navbar-collapse collapse" id="navbar">
+    <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'recipe_list' %}">Recipes</a>
+        </li>
+        {% if user.is_authenticated %}
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'user_profile' user.id %}">Hello, {{ user.username }}</a>
+          </li>
+          {% if user.is_superuser %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'admin:index' %}">Admin</a>
+            </li>
+          {% endif %}
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+          </li>
+        {% else %}
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'login' %}">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'register' %}">Register</a>
+          </li>
+        {% endif %}
+      </ul>
+  </div>
+</nav>
