--- a/recipeapp/templates/recipe_detail.html
+++ b/recipeapp/templates/recipe_detail.html
@@ -1,3 +1,13 @@
+<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'
+      type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet'
+      type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Bree+Serif' rel='stylesheet'
+      type='text/css'>
+
+<link href="https://fonts.googleapis.com/css?family=Cookie&display=swap" rel="stylesheet">
+
+
 {% extends 'base.html' %}
 
 {% block title %}
@@ -9,13 +19,20 @@
     <div class="p-3">
       <div class="card">
         <div class="card-body">
-          <h1 class="card-title">
+          <h1 style="line-height: 2.5; text-align: left; font-family:Cookie; font-weight:300;" class="card-title">
+            {{ recipe.title }}
+          </h1>
+          <h1 style="line-height: 2; text-align: left; font-family:Cookie; font-weight:300;" class="card-title">
             {{ recipe.description }}
           </h1>
-            <h2> Category: {{ recipe.category }} </h2>
-          <p class="card-text">Created by:
-            <p> {{ recipe.user.username }} </p>
-          </p>
+          <h2 style="line-height: 1.6; text-align: left; font-family:Cookie; font-weight:300;"> Category: {{ recipe.category }} </h2>
+          <h2 style="line-height: 1.6; text-align: left; font-family:Cookie; font-weight:300;"> Difficulty: {{ recipe.difficulty }} </h2>
+          {% if recipe.image %}
+                <img style="height:200px; width:300px;" src="{{recipe.image.url}}" >
+                <br />
+            {% endif %}
+            <br />
+          <h3 style="line-height: 1.6; text-align: left; font-family:Cookie; font-weight:300; font-style:italic" class="card-text"> Created by: {{ recipe.user.username }} </h3>
         </div>
       </div>
     </div>
